libs/@local/hql/cst/src/snapshots/hql_cst__expr__test__fn_empty.snap
---
source: libs/@local/hql/cst/src/expr.rs
expression: "Expr::from_str(&arena, \"[]\")"
---
Err(
    Error("invalid length 0, expected at least 1 element", line: 1, column: 2),
)
