libs/@local/hql/cst/src/snapshots/hql_cst__expr__test__fn_empty_args.snap
---
source: libs/@local/hql/cst/src/expr.rs
expression: result
---
Ok(
    Call(
        Call {
            fn: Path(
                Path(
                    [
                        Symbol(
                            "func",
                        ),
                    ],
                ),
            ),
            args: [],
        },
    ),
)
