libs/@local/hql/cst/src/snapshots/hql_cst__expr__test__fn_is_expr.snap
---
source: libs/@local/hql/cst/src/expr.rs
expression: result
---
Ok(
    Call(
        Call {
            fn: Call(
                Call {
                    fn: Symbol(
                        Symbol(
                            "input",
                        ),
                    ),
                    args: [
                        Symbol(
                            Symbol(
                                "variable",
                            ),
                        ),
                    ],
                },
            ),
            args: [
                Symbol(
                    Symbol(
                        "arg1",
                    ),
                ),
                Symbol(
                    Symbol(
                        "arg2",
                    ),
                ),
            ],
        },
    ),
)
