libs/@local/hql/cst/src/snapshots/hql_cst__expr__test__object_is_args_without_fn.snap
---
source: libs/@local/hql/cst/src/expr.rs
expression: "{\"args\": [\"arg1\", \"arg2\"]}"
---
Err(
    Error("missing field `fn, const, var, or sig`", line: 1, column: 26),
)
