libs/@local/hql/cst/src/snapshots/hql_cst__expr__test__object_is_call.snap
---
source: libs/@local/hql/cst/src/expr.rs
expression: "Expr::from_str(&arena, r#\"{\"fn\": \"func\", \"args\": [\"arg1\", \"arg2\"]}\"#)"
---
Ok(
    Call(
        Call {
            fn: Path(
                Path(
                    [
                        Symbol(
                            "func",
                        ),
                    ],
                ),
            ),
            args: [
                Path(
                    Path(
                        [
                            Symbol(
                                "arg1",
                            ),
                        ],
                    ),
                ),
                Path(
                    Path(
                        [
                            Symbol(
                                "arg2",
                            ),
                        ],
                    ),
                ),
            ],
        },
    ),
)
