libs/@local/hql/cst/src/snapshots/hql_cst__expr__test__object_is_call_without_args.snap
---
source: libs/@local/hql/cst/src/expr.rs
expression: result
---
Ok(
    Call(
        Call {
            fn: Symbol(
                Symbol(
                    "func",
                ),
            ),
            args: [],
        },
    ),
)
