libs/@local/hql/cst/src/snapshots/hql_cst__expr__test__object_is_constant_with_extra_fields.snap
---
source: libs/@local/hql/cst/src/expr.rs
expression: result
---
Err(
    Error("unknown field `sig`, expected `r#type`", line: 1, column: 49),
)
