libs/@local/hql/cst/src/snapshots/hql_cst__expr__test__object_is_constant_with_type.snap
---
source: libs/@local/hql/cst/src/expr.rs
expression: "Expr::from_str(&arena, r#\"{\"type\": \"u32\", \"const\": 42}\"#)"
---
Ok(
    Constant(
        Constant {
            value: Number(42),
            type: Some(
                Symbol(
                    Symbol(
                        "u32",
                    ),
                ),
            ),
        },
    ),
)
