libs/@local/hql/cst/src/snapshots/hql_cst__expr__test__object_is_empty.snap
---
source: libs/@local/hql/cst/src/expr.rs
expression: "{}"
---
Err(
    Error("missing field `fn, const, var, or sig`", line: 1, column: 2),
)
