libs/@local/hql/cst/src/snapshots/hql_cst__expr__test__object_is_invalid.snap
---
source: libs/@local/hql/cst/src/expr.rs
expression: "Expr::from_str(&arena, r#\"{\"unknown\": \"key\"}\"#)"
---
Err(
    Error("unknown variant `unknown`, expected one of `fn`, `args`, `const`, `type`, `var`, `sig`", line: 1, column: 10),
)
