libs/@local/hql/cst/src/snapshots/hql_cst__expr__test__object_is_invalid_multiple.snap
---
source: libs/@local/hql/cst/src/expr.rs
expression: "{\"sig\": \"<T: Int>(a: T) -> T\", \"fn\": \"func\"}"
---
Err(
    Error("unknown field `sig`, expected `args`", line: 1, column: 44),
)
